cluster/k8s/backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: backend-deployment
    labels:
        app: mybackend
        type: backend

spec:
    template:
        metadata:
            name: mybackend-pod
            labels:
                app: mybackend
                type: backend

        spec:
            containers:
                - name: my-backend-container
                  image: adamtra/cluster-backend

    replicas: 3
    selector:
        matchLabels:
            type: backend
