cluster/k8s/frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: frontend-deployment
    labels:
        app: myfrontend
        type: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: myfrontend
                type: frontend

        spec:
            containers:
                - name: my-frontend-container
                  image: adamtra/cluster-frontend

    replicas: 4
    selector:
        matchLabels:
            type: frontend
