cluster/k8s/nginx-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: nginx-deployment
    labels:
        app: mynginx
        type: nginx

spec:
    template:
        metadata:
            name: mynginx-pod
            labels:
                app: mynginx
                type: nginx

        spec:
            containers:
                - name: my-nginx-container
                  image: adamtra/cluster-nginx

    replicas: 1
    selector:
        matchLabels:
            type: nginx
