cluster/k8s/postgres-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: postgres-deployment
    labels:
        app: mypostgres
        type: db

spec:
    template:
        metadata:
            name: mypostgres-pod
            labels:
                app: mypostgres
                type: db

        spec:
            containers:
                - name: my-postgres-container
                  image: postgres
                  volumeMount:
                    - mountPath: /var/lib/postgresql/data/pgdata
                      name: postgresvolume
                      subPath: postgres
            volumes:
                - name: postgresvolume
                  persistentVolumeClaim:
                    claimName: postgres-pvc

    replicas: 1
    selector:
        matchLabels:
            type: db
