cluster/k8s/nginx-service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
    name: my-nginx-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 80
          port: 80

    selector:
        type: nginx
